--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "framer-motion": "^10.15.0",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2"
   }
 }
